add multiline string support